--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ async function view_timeseries_from_audio() {
 	const normalArray_normalized = await decodeAudioData_from_binaryString_to_uint8Array(binaryString);
 	const t0 = Array.from({ length: normalArray_normalized.length }, (_, i) => i * time_sample_rate_OR_timePeriod);
 	
-	await plot_line_graph_dataObject(t0, normalArray_normalized);
+	await plot_line_graph_dataObject(t0, normalArray_normalized, "Timeseries: both channels");
 	
 	// --------------------
 
@@ -173,8 +173,8 @@ async function view_timeseries_from_audio() {
 
 	const t1 = Array.from({ length: normalArray_normalized.length }, (_, i) => i * time_sample_rate_OR_timePeriod);
 
-	await plot_line_graph_dataObject(t1, channel1);
-	await plot_line_graph_dataObject(t1, channel2);
+	await plot_line_graph_dataObject(t1, channel1, "Timeseries: channel 1");
+	await plot_line_graph_dataObject(t1, channel2, "Timeseries: channel 2");
 
 	// --------------------
 
@@ -183,7 +183,7 @@ async function view_timeseries_from_audio() {
 	console.log('x.length : ', x.length);
 	var x_avg = await (channel1 + channel2).map((val, ind) => { return val/2; });
 
-	await plot_line_graph_dataObject(t1, x_avg);
+	await plot_line_graph_dataObject(t1, x_avg, "Timeseries: channels averaged");
 
 	// --------------------
 
@@ -191,12 +191,12 @@ async function view_timeseries_from_audio() {
 	var freq_response = await DFT(x_avg);
 
 	f = Array.from({ length: freq_response.length }, (_, i) => i * 2 * Math.PI * 1/time_sample_rate_OR_timePeriod);
-	await plot_line_graph_dataObject(f, freq_response);
+	await plot_line_graph_dataObject(f, freq_response, "Frequency response: Hz");
 
 	// --------------------
 	
 	var freq_response_db = 20 * Math.log10(freq_response);
-	await plot_line_graph_dataObject(f, freq_response_db);
+	await plot_line_graph_dataObject(f, freq_response_db, "Frequency response: decibels");
 	
 	// --------------------
 	
