--- a/index2.html
+++ b/index2.html
@@ -4,9 +4,10 @@
     
 <body>
 
-
 <button type="button" id="run_process" onclick="run_process()" style="display:block">run_process</button>
-  
+
+<input type="text" name="" id="input" value="" placeholder="input" style="display:block;">
+    
 <script>
 
 async function run_process() {
@@ -24,7 +25,7 @@ async function run_process() {
   
     function handleDataAvailable(event) {
       if (event.data.size > 0) {
-        recordedChunks.push(even.data);
+        recordedChunks.push(event.data);
         download();
       }
     }
